--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div id="can-ofemail">officialcoder@gmail.com</div>
         <a id="can-git" href="" target="_blank">Git-hub</a>
         <a id="can-linkden" href="" target="_blank">Linkedin</a>
-        <a href="" id="can-portfolio" target="_blank" >Portfololio</a>
+        <a href="" id="can-portfolio" target="_blank" >Portfolio</a>
     </div>
     
     <!-- Education Section -->
